# otherside-launcher

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  api.ts  auth.tsx  main.tsx  sounds.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: auth-bridge.toml
src-tauri/src/: lib.rs  main.rs
src/components/: NotifBell.tsx  SocialPanel.tsx  Tooltip.tsx
src/pages/: Experiences.tsx  Home.tsx  Login.tsx  Market.tsx  Settings.tsx
src/styles/: base.css  experiences.css  home.css  login.css  settings.css  topbar.css
